# PM3-Modding

./: PM3_Flash.kicad_pcb  PM3_Flash.kicad_pro  PM3_Flash.kicad_sch  README.md
.github/workflows/: build-bridge-firmware.yml
PM3_Flash/: README.md
PM3_Flash/hardware/: .gitignore  PM3_Flash.kicad_sch
PM3_ISO7816/: .gitignore  PM3_ISO7816.kicad_pro  README.md  fp-lib-table  sym-lib-table
PM3_ISO7816/firmware/: dumper.sha512.txt
PM3_ISO7816/firmware/dumper/: .gitignore  README.md  printf_UART1.uvopt  printf_UART1.uvproj
PM3_ISO7816/firmware/dumper/Code/: PUTCHAR.C  Print_UART1.C
PM3_ISO7816/firmware/dumper/Common/: Common.c  Delay.c
PM3_ISO7816/firmware/dumper/Include/: Common.h  Delay.h  Function_Define.h  N76E003.h  SFR_Macro.h
PM3_ISO7816/hardware/: PM3_ISO7816.kicad_pcb  PM3_ISO7816.kicad_pro  PM3_ISO7816.kicad_sch
PM3_ISO7816/hardware/libs/: N76E003AT20.kicad_sym  N76E003AT20.step  WURTH_693010020611.kicad_mod
PM3_ISO7816/libs/: 693010020611.kicad_sym  SOP65P640X120-20N.kicad_mod
PM3_USB2TCP/: README.md
PM3_USB2TCP/firmware/: CMakeLists.txt  sdkconfig.defaults
PM3_USB2TCP/firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  common_vars.c  common_vars.h  main.c  tcp-server.c  tcp-server.h  usb-cdc.c  usb-cdc.h
PM3_USB2TCP/firmware/main/wifi/: wifi.h  (+1 more)
PM3_USB2UDP/: README.md
PM3_USB2UDP/firmware/: .gitignore  CMakeLists.txt
PM3_USB2UDP/firmware/main/: CMakeLists.txt  app_main.c  common_vars.h  udp-server.c  udp-server.h  usb-cdc.c  usb-cdc.h  wifi.c  wifi.h
PM3_USB2UDP/firmware/main/wifi/: wifi.h  wifi_ap.c  wifi_station.c
